# sdl_apfel

./: CMakeLists.txt  README.md  cross_build.sh
src/: komplex.cpp  komplex.h  main.cpp
